--- a/AdminDashboardProject/AdminDashboardProject.csproj
+++ b/AdminDashboardProject/AdminDashboardProject.csproj
@@ -7,11 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Data\DataProject.csproj" />
+    <ProjectReference Include="..\SharedProject\SharedProject.csproj" />
   </ItemGroup>
 
 </Project>
