--- a/AdminDashboardProject/AdminDashboardProject.csproj
+++ b/AdminDashboardProject/AdminDashboardProject.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\SharedProject\SharedProject.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\assets\product\images\" />
+  </ItemGroup>
+
 </Project>
